add styele and transition to collapse compoent

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -1,16 +1,9 @@
-/* colors */
-:root {
+:root { 
   --vk-color-white: #ffffff;
   --vk-color-black: #000000;
-  --colors: (
-    primary: #409eff,
-    success: #67c23a,
-    warning: #e6a23c,
-    danger: #f56c6c,
-    info: #909399
-  );
+  --colors: ( primary: #409eff, success: #67c23a, warning: #e6a23c, danger: #f56c6c, info: #909399 );
 
-  @each $val, $color in var(--colors) {
+  @each $val, $color in (primary, success, warning, danger), (#409eff, #67c23a, #e6a23c, #f56c6c,  #909399) {
     --vk-color-$(val): $(color);
     @for $i from 3 to 9 by 2 {
       --vk-color-$(val)-light-$(i): mix(#fff, $(color), .$(i))
@@ -19,6 +12,41 @@
     --vk-color-$(val)-dark-2: mix(#000, $(color), .2);
   }
 
+  --vk-color-primary: #409eff;
+  --vk-color-primary-light-3: #79BBFF;
+  --vk-color-primary-light-5: #A0CFFF;
+  --vk-color-primary-light-7: #C6E2FF;
+  --vk-color-primary-light-9: #ECF5FF;
+  --vk-color-primary-light-8: #D9ECFF;
+  --vk-color-primary-dark-2: #337ECC;
+  --vk-color-success: #67c23a;
+  --vk-color-success-light-3: #95D475;
+  --vk-color-success-light-5: #B3E19D;
+  --vk-color-success-light-7: #D1EDC4;
+  --vk-color-success-light-9: #F0F9EB;
+  --vk-color-success-light-8: #E1F3D8;
+  --vk-color-success-dark-2: #529B2E;
+  --vk-color-warning: #e6a23c;
+  --vk-color-warning-light-3: #EEBE77;
+  --vk-color-warning-light-5: #F3D19E;
+  --vk-color-warning-light-7: #F8E3C5;
+  --vk-color-warning-light-9: #FDF6EC;
+  --vk-color-warning-light-8: #FAECD8;
+  --vk-color-warning-dark-2: #B88230;
+  --vk-color-danger: #f56c6c;
+  --vk-color-danger-light-3: #F89898;
+  --vk-color-danger-light-5: #FAB6B6;
+  --vk-color-danger-light-7: #FCD3D3;
+  --vk-color-danger-light-9: #FEF0F0;
+  --vk-color-danger-light-8: #FDE2E2;
+  --vk-color-danger-dark-2: #C45656;
+  --vk-color-info: #909399;
+  --vk-color-info-light-3: #B1B3B8;
+  --vk-color-info-light-5: #C8C9CC;
+  --vk-color-info-light-7: #DEDFE0;
+  --vk-color-info-light-9: #F4F4F5;
+  --vk-color-info-light-8: #E9E9EB;
+  --vk-color-info-dark-2: #73767A;
   --vk-bg-color: #ffffff;
   --vk-bg-color-page: #f2f3f5;
   --vk-bg-color-overlay: #ffffff;
@@ -40,8 +68,6 @@
   --vk-fill-color-dark: #ebedf0;
   --vk-fill-color-darker: #e6e8eb;
   --vk-fill-color-blank: #ffffff;
-
-  /* border */
   --vk-border-width: 1px;
   --vk-border-style: solid;
   --vk-border-color-hover: var(--vk-text-color-disabled);
@@ -50,8 +76,6 @@
   --vk-border-radius-small: 2px;
   --vk-border-radius-round: 20px;
   --vk-border-radius-circle: 100%;
-
-  /*font*/
   --vk-font-size-extra-large: 20px;
   --vk-font-size-large: 18px;
   --vk-font-size-medium: 16px;
@@ -60,14 +84,13 @@
   --vk-font-size-extra-small: 12px;
   --vk-font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "\5fae\8f6f\96c5\9ed1", Arial, sans-serif;
   --vk-font-weight-primary: 500;
-
-  /*disabled*/
   --vk-disabled-bg-color: var(--vk-fill-color-light);
   --vk-disabled-text-color: var(--vk-text-color-placeholder);
   --vk-disabled-border-color: var(--vk-border-color-light);
-  
-  /*animation*/
   --vk-transition-duration: .3s;
   --vk-transition-duration-fast: .2s;
-
+  --vk-box-shadow: 0px 12px 32px 4px rgba(0, 0, 0, .04), 0px 8px 20px rgba(0, 0, 0, .08);
+  --vk-box-shadow-light: 0px 0px 12px rgba(0, 0, 0, .12);
+  --vk-box-shadow-lighter: 0px 0px 6px rgba(0, 0, 0, .12);
+  --vk-box-shadow-dark: 0px 16px 48px 16px rgba(0, 0, 0, .08), 0px 12px 32px rgba(0, 0, 0, .12), 0px 8px 16px -8px rgba(0, 0, 0, .16);
 }
